data/derived/sp14/progs/unify/prog3035.ml.out
Characters 77-79:
  | Sine a -> sin (pi * eval (a,x,y))
                   ^^
Error: This expression has type float but an expression was expected of type
         int
